Ajout du container; du header; du main et de la section hébergements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,147 @@
     <title>Booki</title>
 </head>
 <body>
-    <h1>Booki</h1>
+    <div class="container">
+        <header>
+            <a href="index.html" class="logo">
+                <img src="./images/logo/Booki.png" alt="logo du site">
+            </a><!-- Fin a.logo-->
+            <nav>
+                <ul>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                    <li><a href="#activites">Activités</a></li>
+                </ul>
+            </nav><!-- Fin nav-->
+        </header><!-- Fin header -->
+        <main>
+            <section class="entete">
+                <h1>
+                    Trouvez votre hébergement pour des vacances de rêve
+                </h1>
+                <p>
+                    En plein centre ville ou en pleine nature
+                </p>
+            </section><!-- Fin section.header -->
+            <section class="recherche">
+                <form action="#">
+                    <div>
+                        <span>Icône</span>
+                    </div>
+                    <div>
+                        <input type="text" name="" id="" placeholder="Marseille, France">
+                    </div>
+                    <button type="submit">Rechercher</button>
+                </form><!-- Fin form -->
+                <div class="filter">
+                    <p>Filtres</p>
+                    <div><span>dollar</span><button>Economique</button></div>
+                    <div><span>famille</span><button>Familial</button></div>
+                    <div><span>coeur</span><button>Romantique</button></div>
+                    <div><span>chien</span><button>Animaux autorisés</button></div>
+                </div><!-- Fin div.filter -->
+                <div class="infos">
+                    <span>information</span>
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div><!-- Fin div.infos -->
+            </section><!-- Fin section.search -->
+            <section class="herbergements">
+                <article class="heb-marseille">
+                    <h2>Hébergements à Marseille</h2>
+                    <div class="heb-marseille-hotels">
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="" alt="">
+                            <h3></h3>
+                            <p></p>
+                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                        </article>
+                    </div><!-- Fin div.heb-marseille-hotels -->
+                    <a href="#" class="more">Afficher plus</a>
+                </article><!-- Fin article.heb-marseille -->
+                <aside class="populaires">
+                    <div class="pop-title"></div>
+                    <article class="pop-hotels">
+                        <div class="pop-hotels-vignette">
+                            <img src="" alt="">
+                            <div class="pop-hotels-vig-infos">
+                                <h3></h3>
+                                <p></p>
+                                <div class="stars">
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pop-hotels-vignette">
+                            <img src="" alt="">
+                            <div class="pop-hotels-vig-infos">
+                                <h3></h3>
+                                <p></p>
+                                <div class="stars">
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pop-hotels-vignette">
+                            <img src="" alt="">
+                            <div class="pop-hotels-vig-infos">
+                                <h3></h3>
+                                <p></p>
+                                <div class="stars">
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                    <span class="star"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </aside><!-- Fin aside.populaires -->
+            </section><!-- Fin section.hebergements -->
+        </main><!-- Fin main -->
+    </div> <!-- Fin .container -->
 </body>
 </html>
