--- a/index.html
+++ b/index.html
@@ -55,58 +55,79 @@
                     <h2>Hébergements à Marseille</h2>
                     <div class="heb-marseille-hotels">
                         <article class="heb-marseille-hotels-vignette">
-                            <img src="" alt="">
-                            <h3></h3>
-                            <p></p>
+                            <img src="images/hebergements/4_small/auberge-cannebiere.jpg" alt="Auberge La Cannebière">
+                            <h3>Auberge La Cannebière</h3>
+                            <p>Nuit à partir de 25€</p>
                             <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
                         </article>
                         <article class="heb-marseille-hotels-vignette">
-                            <img src="" alt="">
-                            <h3></h3>
-                            <p></p>
+                            <img src="images/hebergements/4_small/hotel-port.jpg" alt="Hôtel du Port">
+                            <h3>Hôtel du Port</h3>
+                            <p>Nuit à partir de 52€</p>
                             <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
                         </article>
                         <article class="heb-marseille-hotels-vignette">
-                            <img src="" alt="">
-                            <h3></h3>
-                            <p></p>
+                            <img src="images/hebergements/4_small/hotel-mouettes.jpg" alt="Hôtel les mouttes">
+                            <h3>Hôtel les mouettes</h3>
+                            <p>Nuit à partir de 76€</p>
                             <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
                         </article>
                         <article class="heb-marseille-hotels-vignette">
-                            <img src="" alt="">
-                            <h3></h3>
-                            <p></p>
+                            <img src="images/hebergements/4_small/hotel-de-la-mer.jpg" alt="Hôtel de la mer">
+                            <h3>Hôtel de la mer</h3>
+                            <p>Nuit à partir de 46€</p>
+                            <div class="stars">
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                            </div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="./images/hebergements/4_small/auberge-panier.jpg" alt="Auberge Le Panier">
+                            <h3>Auberge Le Panier</h3>
+                            <p>Nuit à partir de 128€</p>
+                            <div class="stars">
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                            </div>
+                        </article>
+                        <article class="heb-marseille-hotels-vignette">
+                            <img src="./images/hebergements/4_small/hotel-amina.jpg" alt="Hôtel chez Amina">
+                            <h3>Hôtel chez Amina</h3>
+                            <p>Nuit à partir de 96€</p>
                             <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
                         </article>
                         <article class="heb-marseille-hotels-vignette">
-                            <img src="" alt="">
-                            <h3></h3>
-                            <p></p>
-                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
-                        </article>
-                        <article class="heb-marseille-hotels-vignette">
-                            <img src="" alt="">
-                            <h3></h3>
-                            <p></p>
-                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
-                        </article>
-                        <article class="heb-marseille-hotels-vignette">
-                            <img src="" alt="">
-                            <h3></h3>
-                            <p></p>
-                            <div class="stars"><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span></div>
+                            <img src="./images/hebergements/4_small/hotel-bleu-blanc.jpg" alt="Hôtel Tout bleu et Blanc">
+                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <p>Nuit à partir de 68€</p>
+                            <div class="stars">
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                                <span class="star"></span>
+                            </div>
                         </article>
                     </div><!-- Fin div.heb-marseille-hotels -->
                     <a href="#" class="more">Afficher plus</a>
                 </article><!-- Fin article.heb-marseille -->
                 <aside class="populaires">
-                    <div class="pop-title"></div>
+                    <div class="pop-title">
+                        <h2>Les plus populaires</h2>
+                        <i></i>
+                    </div>
                     <article class="pop-hotels">
                         <div class="pop-hotels-vignette">
-                            <img src="" alt="">
+                            <img src="./images/hebergements/4_small/hotel-soleil-matin.jpg" alt="Hôtel du soleil matin">
                             <div class="pop-hotels-vig-infos">
-                                <h3></h3>
-                                <p></p>
+                                <h3>Hôtel du soleil matin</h3>
+                                <p>Nuit à partir de 128€</p>
                                 <div class="stars">
                                     <span class="star"></span>
                                     <span class="star"></span>
@@ -117,10 +138,10 @@
                             </div>
                         </div>
                         <div class="pop-hotels-vignette">
-                            <img src="" alt="">
+                            <img src="./images/hebergements/4_small/au-coeur-de-leau.jpg" alt="Au coeur de l'eau Chambre d'hôtes">
                             <div class="pop-hotels-vig-infos">
-                                <h3></h3>
-                                <p></p>
+                                <h3>Au coeur de l'eau Chambre d'hôtes</h3>
+                                <p>Nuit à partir de 71€</p>
                                 <div class="stars">
                                     <span class="star"></span>
                                     <span class="star"></span>
@@ -131,10 +152,10 @@
                             </div>
                         </div>
                         <div class="pop-hotels-vignette">
-                            <img src="" alt="">
+                            <img src="./images/hebergements/4_small/hotel-bleu-blanc.jpg" alt="Hôtel Tout bleu et Blanc">
                             <div class="pop-hotels-vig-infos">
-                                <h3></h3>
-                                <p></p>
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <p>Nuit à partir de 68€</p>
                                 <div class="stars">
                                     <span class="star"></span>
                                     <span class="star"></span>
@@ -147,7 +168,60 @@
                     </article>
                 </aside><!-- Fin aside.populaires -->
             </section><!-- Fin section.hebergements -->
+            <section class="act-marseille">
+                <h2>Activités à Marseille</h2>
+                <article class="grid-container">
+                    <div class="grid-item">
+                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image du vieux port">
+                        <h3>Vieux Port</h3>
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomègues">
+                        <h3>Fort de Pomègues</h3>
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles de frioul">
+                        <h3>Iles de Frioul</h3>
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
+                        <h3>Parc national des Calanques</h3>
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-dame-de-le-garde">
+                        <h3>Notre-dame-de-le-garde</h3>
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc longchamp">
+                        <h3>Parc Longchamp</h3>
+                    </div>
+                </article>
+            </section><!-- Fin section.act-marseille -->
         </main><!-- Fin main -->
+        <footer>
+            <section class="footer-nav">
+                <h3>A propos</h3>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions génerales de vente</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                </ul>
+            </section>
+            <section class="footer-nav">
+                <h3>Nos hébergements</h3>
+                <ul>
+                    <li><a href="#">Chartre qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
+                </ul>
+            </section>
+            <section class="footer-nav">
+                <h3>Assistance</h3>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
+            </section>
+        </footer><!-- Fin footer -->
     </div> <!-- Fin .container -->
 </body>
 </html>
